Major update to code, now uses dask arrays in order to limit memory use. Tests updated too and some additional SEVIRI documentation in the example file.

--- a/Complex_SEVIRI.ipynb
+++ b/Complex_SEVIRI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c4a3c5a3",
+   "id": "4f1777f0",
    "metadata": {},
    "source": [
     "# Example processing script for SEVIRI data\n",
@@ -27,13 +27,38 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "75739ff9",
+   "id": "c715463a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<dask.config.set at 0x1c02a886230>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
+    "# If you have a powerful machine, the dask library can actually slow things down.\n",
+    "# These lines limit the resources dask uses, you may need to experiment with the\n",
+    "# `num_workers` argument to find what works best on your own machine.\n",
+    "import dask\n",
+    "dask.config.set(num_workers=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c3c82074",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from satpy import Scene, find_files_and_readers\n",
     "from pyresample import create_area_def\n",
     "from datetime import datetime\n",
@@ -49,8 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "bd0ac4f1",
+   "execution_count": 3,
+   "id": "0f07e2b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5e0b928a",
    "metadata": {},
    "outputs": [],
@@ -140,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "351f79c3",
    "metadata": {},
    "outputs": [],
@@ -152,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "fb118cb5",
    "metadata": {},
    "outputs": [],
@@ -164,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "f15954c7",
    "metadata": {},
    "outputs": [],
@@ -176,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "feb04898",
    "metadata": {},
    "outputs": [],
@@ -187,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "122fdbf8",
    "metadata": {},
    "outputs": [],
@@ -201,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "e1c4a155",
    "metadata": {},
    "outputs": [],
@@ -214,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "bbaa5bf4",
    "metadata": {},
    "outputs": [],
@@ -225,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "3d7343d9",
    "metadata": {},
    "outputs": [],
@@ -236,9 +261,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "6f2c3cbc",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Save results and intermediate variables to disk.\n",
@@ -247,112 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "254e180f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on class PyCoxMunk in module pycoxmunk.CM_Main:\n",
-      "\n",
-      "class PyCoxMunk(builtins.object)\n",
-      " |  PyCoxMunk(scn, band_names, oc_dir=None, angle_names=None, do_brdf=False, mask_bad=True, delete_when_done=True)\n",
-      " |  \n",
-      " |  The main class for the library, sets up and runs processing.\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __init__(self, scn, band_names, oc_dir=None, angle_names=None, do_brdf=False, mask_bad=True, delete_when_done=True)\n",
-      " |      Initialise the class.\n",
-      " |      Inputs:\n",
-      " |      - scn: Satpy Scene, the scene containing data and angles.\n",
-      " |      - band_names: List, if supplied lists all band names to process.\n",
-      " |      - oc_dir: (optional) String, if supplied points to location of Ocean Color CCI data.\n",
-      " |      - angle_names: (optional) Dict, if supplied this should list all\n",
-      " |        solar/satellite angle dataset names. If not supplied, these are assumed.\n",
-      " |      - do_brdf: Bool, if true then PyCoxMunk will also compute BRDF coefficients.\n",
-      " |      - mask_bad: Bool, if true then pixels with bad data (f.ex zenith too high) will be set to np.nan\n",
-      " |  \n",
-      " |  retr_coxmunk_refl(self)\n",
-      " |      Main function for computing the sea surface reflectance.\n",
-      " |      \n",
-      " |      This uses data previously loaded including, if available, wind and ocean color\n",
-      " |      data to compute the reflectance using the approach described in Sayer (2010).\n",
-      " |      DOI: 10.5194/amt-3-813-2010\n",
-      " |      \n",
-      " |      This accounts for white caps and Chlorophyll content (via Ocean Color). However,\n",
-      " |      it is designed for use over open oceans and may give poor results in coastal regions,\n",
-      " |      lakes, and other water types.\n",
-      " |  \n",
-      " |  setup_pixmask(self, cloud_mask=None, land_mask=None, sol_zen_mask=None, sat_zen_mask=None)\n",
-      " |      Add a pixel mask to the class.\n",
-      " |  \n",
-      " |  setup_wind(self, u10, v10)\n",
-      " |      Set up the fields that depend on wind speed.\n",
-      " |      Inputs:\n",
-      " |        - u10: Float or np.ndarray, u-direction wind speed at 10m in m/s.\n",
-      " |        - v10: Float or np.ndarray, v-direction wind speed at 10m in m/s.\n",
-      " |      Returns:\n",
-      " |        - self.shared_wind: CM_Shared_Wind class.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors defined here:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables (if defined)\n",
-      " |  \n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object (if defined)\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(pycoxmunk.PyCoxMunk)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "a8305984",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on package pycoxmunk:\n",
-      "\n",
-      "NAME\n",
-      "    pycoxmunk - For instructions on using pycoxmunk please see the documentation under the pycoxmunk.PyCoxMunk class.\n",
-      "\n",
-      "PACKAGE CONTENTS\n",
-      "    CM_Calcs\n",
-      "    CM_Constants\n",
-      "    CM_Main\n",
-      "    CM_PixMask\n",
-      "    CM_SceneGeom\n",
-      "    CM_Shared_Wind\n",
-      "    CM_Utils\n",
-      "    Tests (package)\n",
-      "\n",
-      "FILE\n",
-      "    c:\\users\\simon\\pycharmprojects\\pycoxmunk\\pycoxmunk\\__init__.py\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(pycoxmunk)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "d8d047c1",
+   "id": "7c7b64fb",
    "metadata": {},
    "outputs": [],
    "source": []
