Update example notebooks.

--- a/Simple_SLSTR.ipynb
+++ b/Simple_SLSTR.ipynb
@@ -1,8 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a25bf7ac",
+   "metadata": {},
+   "source": [
+    "# Example processing script for SLSTR data\n",
+    "### A simple example for retrieving sea surface reflectance using data from the Sentinel-3 / SLSTR instrument.\n",
+    "\n",
+    "This script requires SLSTR data, which is available for download at https://scihub.copernicus.eu/\n",
+    "\n",
+    "In this example we compute the sea surface reflectance based on assumed constant winds across the swath. We do not apply and cloud or land masking and we do not calculate any of the BRDF parameters."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c27e8622",
    "metadata": {},
    "outputs": [],
@@ -20,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "37b0e424",
    "metadata": {},
    "outputs": [],
@@ -39,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "28cd1366",
    "metadata": {},
    "outputs": [],
@@ -59,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3d555065",
    "metadata": {},
    "outputs": [],
@@ -70,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d21f1c78",
    "metadata": {},
    "outputs": [],
@@ -82,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ab714a7c",
    "metadata": {},
    "outputs": [],
@@ -93,12 +106,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "136378a9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save results to the directory specified earlier\n",
+    "# Each dataset is saved to its own file.\n",
     "pcm.scn.save_datasets(base_dir=outdir, enhance=False, dtype=np.float32)"
    ]
   }
