--- a/Examples/Complex_SEVIRI.ipynb
+++ b/Examples/Complex_SEVIRI.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "4f1777f0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Example processing script for SEVIRI data\n",
     "### A more complex example than for SLSTR, using a land-mask and ERA5 wind profiles.\n",
@@ -28,7 +32,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "c715463a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -56,7 +64,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "c3c82074",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from satpy import Scene, find_files_and_readers\n",
@@ -76,18 +88,22 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "0f07e2b9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Filename of the input granule\n",
     "sev_fname = 'd:/sat_data/SEV/MSG3-SEVI-MSG15-0100-NA-20160326144242.057000000Z-NA.nat'\n",
     "\n",
     "# Landmask filename\n",
-    "lsm_fname = './Examples/SEVIRI_LANDMASK.tiff'\n",
+    "lsm_fname = './SEVIRI_LANDMASK.tiff'\n",
     "\n",
     "# Filenames of the U and V 10m wind components, here taken from ERA5\n",
-    "u10_fname = './Examples/ecmwf-era5_oper_an_sfc_201603261500.10u.nc'\n",
-    "v10_fname = './Examples/ecmwf-era5_oper_an_sfc_201603261500.10v.nc'\n",
+    "u10_fname = './ecmwf-era5_oper_an_sfc_201603261500.10u.nc'\n",
+    "v10_fname = './ecmwf-era5_oper_an_sfc_201603261500.10v.nc'\n",
     "\n",
     "# Band name to load / process\n",
     "bnames = ['VIS006', 'VIS008', 'IR_016']\n",
@@ -111,7 +127,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "5e0b928a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# A helper function needed for ECMWF processing\n",
@@ -176,7 +196,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "351f79c3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Create a scene for the granule and load data\n",
@@ -188,7 +212,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "fb118cb5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Load the ECMWF wind\n",
@@ -200,7 +228,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "f15954c7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Load the land mask\n",
@@ -212,7 +244,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "feb04898",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Resample the ECMWF wind data onto the satellite grid\n",
@@ -225,7 +261,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "122fdbf8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Copy the winds from the ECMWF scene into the satellite scene.\n",
@@ -239,7 +279,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "e1c4a155",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Create the PyCoxMunk class\n",
@@ -250,7 +294,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "7cd3640c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Set up the wind variables within PyCoxMunk\n",
@@ -261,7 +309,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "bbaa5bf4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Set up the pixel masking\n",
@@ -273,7 +325,10 @@
    "execution_count": 19,
    "id": "3d7343d9",
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -286,7 +341,10 @@
    "execution_count": 22,
    "id": "6f2c3cbc",
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -298,7 +356,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c871d1d2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
