--- a/Examples/Simple_SLSTR.ipynb
+++ b/Examples/Simple_SLSTR.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "d02528ff",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Example processing script for SLSTR data\n",
     "### A simple example for retrieving sea surface reflectance using data from the Sentinel-3 / SLSTR instrument.\n",
@@ -17,7 +21,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c27e8622",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -35,7 +43,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "37b0e424",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Set which bands we wish to load\n",
@@ -54,7 +66,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "28cd1366",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Create a scene by searching for files\n",
@@ -74,7 +90,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3d555065",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Create the PyCoxMunk class for processing\n",
@@ -85,7 +105,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d21f1c78",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Here we assume a uniform wind, needed for cases we don't have actual wind data\n",
@@ -97,7 +121,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ab714a7c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Retrieve the sea surface reflectance\n",
@@ -108,13 +136,43 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "136378a9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Save results to the directory specified earlier\n",
     "# Each dataset is saved to its own file.\n",
     "pcm.scn.save_datasets(base_dir=outdir, enhance=False, dtype=np.float32)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "823f8d5a",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pycoxmunk.CM_Shared_Wind import CMSharedWind"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95e1cd1f",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
