--- a/Examples/Simple_SLSTR.ipynb
+++ b/Examples/Simple_SLSTR.ipynb
@@ -63,6 +63,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cbd03c6f",
+   "metadata": {},
+   "source": [
+    "Note: You'll need to install the `netCDF4` library if you want to run the rest of this example using `*.nc` files."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "28cd1366",
@@ -74,7 +82,9 @@
    "outputs": [],
    "source": [
     "# Create a scene by searching for files\n",
-    "scn = Scene(find_files_and_readers(base_dir=indir, reader='slstr_l1b'))\n",
+    "file_list = find_files_and_readers(base_dir = indir, reader = 'slstr_l1b')\n",
+    "scn = Scene(file_list, reader = 'slstr_l1b')\n",
+    "\n",
     "# Load the bands\n",
     "scn.load(bnames)\n",
     "\n",
@@ -150,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "823f8d5a",
    "metadata": {
     "pycharm": {
@@ -191,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
