--- a/Examples/Complex_SEVIRI.ipynb
+++ b/Examples/Complex_SEVIRI.ipynb
@@ -325,10 +325,10 @@
    "execution_count": 19,
    "id": "3d7343d9",
    "metadata": {
-    "scrolled": false,
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -341,10 +341,10 @@
    "execution_count": 22,
    "id": "6f2c3cbc",
    "metadata": {
-    "scrolled": false,
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
