Add dependencies for GOES data and correct a typo.

--- a/Examples/Simple_GOES_ABI.ipynb
+++ b/Examples/Simple_GOES_ABI.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "d02528ff",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "# Example processing script for GOES/ABIdata\n",
     "### A simple example for retrieving sea surface reflectance using data from the GOES/ABI instrument.\n",
@@ -15,30 +11,20 @@
     "This script uses free and open GOES/ABI data from NOAA's big data project, you do not need to download data in advance as\n",
     "this is done within the notebook itself.\n",
     "\n",
-    "NOTE: An library is required for this notebook, to enable the remote data to be read: `s3fs`.\n",
+    "NOTE: Additional libraries are required for this notebook:\n",
+    " 1) To enable the remote data to be read: `s3fs`.\n",
+    " 2) For loading the data in satpy: `h5netcdf`.\n",
+    " 3) For saving the results: `rasterio`.\n",
     "\n",
-    "Here we compute the sea surface reflectance based on assumed constant winds across the globe. We do not apply and cloud or land masking and we do not calculate any of the BRDF parameters."
+    "Here we compute the sea surface reflectance based on assumed constant winds across the globe. We do not apply any cloud or land masking, and we do not calculate any of the BRDF parameters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c27e8622",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -55,13 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "37b0e424",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set which bands we wish to load\n",
@@ -78,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "c8055144",
    "metadata": {},
    "outputs": [],
@@ -105,12 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "28cd1366",
    "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
     "scrolled": false
    },
    "outputs": [],
@@ -128,13 +107,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "3d555065",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create the PyCoxMunk class for processing\n",
@@ -145,13 +120,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "d21f1c78",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Here we assume a uniform wind, needed for cases we don't have actual wind data\n",
@@ -161,13 +132,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "ab714a7c",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Retrieve the sea surface reflectance\n",
@@ -176,13 +143,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "136378a9",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Save results to the directory specified earlier\n",
@@ -194,11 +157,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "95e1cd1f",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
