Update example notebooks and add ERA5 test data.

--- a/Examples/Complex_SEVIRI.ipynb
+++ b/Examples/Complex_SEVIRI.ipynb
@@ -14,9 +14,11 @@
     "\n",
     "This script requires MSG/SEVIRI data in native format (although it can be easily edited to use HRIT data instead).\n",
     "\n",
-    "Data is available for download at https://data.eumetsat.int\n",
+    "For this example, a full disk SEVIRI dataset from 26th March 2016 at 14:30 UTC was used. The data file can be downloaded at https://data.eumetsat.int\n",
     "\n",
     "ERA5 data is included in the Examples directory. These files were generated using Copernicus Climate Change Service information (2022).\n",
+    "\n",
+    "Output from this example notebook is available on zenodo: https://doi.org/10.5281/zenodo.7885996\n",
     "\n",
     "In this example we compute the sea surface reflectance and also the BRDF values:\n",
     "\n",
@@ -30,23 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "c715463a",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -62,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "c3c82074",
    "metadata": {
     "pycharm": {
@@ -86,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "0f07e2b9",
    "metadata": {
     "pycharm": {
@@ -108,6 +101,12 @@
     "# Band name to load / process\n",
     "bnames = ['VIS006', 'VIS008', 'IR_016']\n",
     "\n",
+    "# Band names to save\n",
+    "bnames_out = ['VIS006', 'VIS008', 'IR_016',\n",
+    "              'cox_munk_refl_VIS006', 'cox_munk_refl_VIS008', 'cox_munk_refl_IR_016',\n",
+    "              'cox_munk_rhodv_VIS006', 'cox_munk_rho0v_VIS006']\n",
+    "              \n",
+    "\n",
     "# Cache dir for use in satpy's resample routines\n",
     "# This is optional, but can help speed things up - especially for \n",
     "# geostationary satellites where the area covered is a constant region.\n",
@@ -125,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "5e0b928a",
    "metadata": {
     "pycharm": {
@@ -194,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "351f79c3",
    "metadata": {
     "pycharm": {
@@ -210,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "fb118cb5",
    "metadata": {
     "pycharm": {
@@ -226,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "f15954c7",
    "metadata": {
     "pycharm": {
@@ -242,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "feb04898",
    "metadata": {
     "pycharm": {
@@ -259,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "122fdbf8",
    "metadata": {
     "pycharm": {
@@ -277,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "e1c4a155",
    "metadata": {
     "pycharm": {
@@ -292,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "7cd3640c",
    "metadata": {
     "pycharm": {
@@ -307,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "bbaa5bf4",
    "metadata": {
     "pycharm": {
@@ -322,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "3d7343d9",
    "metadata": {
     "pycharm": {
@@ -338,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "6f2c3cbc",
    "metadata": {
     "pycharm": {
@@ -348,21 +347,9 @@
    },
    "outputs": [],
    "source": [
-    "# Save results and intermediate variables to disk.\n",
-    "pcm.scn.save_datasets(datasets=bnames, base_dir='d:/sat_data/sev/out/', enhance=False, dtype=np.float32)"
+    "# Save original data to disk.\n",
+    "pcm.scn.save_datasets(datasets=bnames_out, base_dir='d:/sat_data/sev/out/', enhance=False, dtype=np.float32)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c871d1d2",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
