--- a/Examples/Simple_SLSTR.ipynb
+++ b/Examples/Simple_SLSTR.ipynb
@@ -14,6 +14,8 @@
     "\n",
     "This script requires SLSTR data, which is available for download at https://scihub.copernicus.eu/\n",
     "\n",
+    "A single example scene, together with sample output, is included in the zenodo archive associated with pycoxmunk: https://doi.org/10.5281/zenodo.7885996\n",
+    "\n",
     "In this example we compute the sea surface reflectance based on assumed constant winds across the swath. We do not apply and cloud or land masking and we do not calculate any of the BRDF parameters."
    ]
   },
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "28cd1366",
    "metadata": {
     "pycharm": {
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "3d555065",
    "metadata": {
     "pycharm": {
@@ -105,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "d21f1c78",
    "metadata": {
     "pycharm": {
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "ab714a7c",
    "metadata": {
     "pycharm": {
@@ -136,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "136378a9",
    "metadata": {
     "pycharm": {
