--- a/Examples/Simple_GOES_ABI.ipynb
+++ b/Examples/Simple_GOES_ABI.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "d02528ff",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "# Example processing script for GOES/ABIdata\n",
     "### A simple example for retrieving sea surface reflectance using data from the GOES/ABI instrument.\n",
@@ -15,30 +11,22 @@
     "This script uses free and open GOES/ABI data from NOAA's big data project, you do not need to download data in advance as\n",
     "this is done within the notebook itself.\n",
     "\n",
-    "NOTE: An library is required for this notebook, to enable the remote data to be read: `s3fs`.\n",
+    "Output from this example notebook is available on zenodo: https://doi.org/10.5281/zenodo.7885996\n",
     "\n",
-    "Here we compute the sea surface reflectance based on assumed constant winds across the globe. We do not apply and cloud or land masking and we do not calculate any of the BRDF parameters."
+    "NOTE: Additional libraries are required for this notebook:\n",
+    " 1) To enable the remote data to be read: `s3fs`.\n",
+    " 2) For loading the data in satpy: `h5netcdf`.\n",
+    " 3) For saving the results: `rasterio`.\n",
+    "\n",
+    "Here we compute the sea surface reflectance based on assumed constant winds across the globe. We do not apply any cloud or land masking, and we do not calculate any of the BRDF parameters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "c27e8622",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -55,30 +43,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "37b0e424",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set which bands we wish to load\n",
     "bnames = ['C01', 'C02', 'C04']\n",
     "\n",
-    "# Set the directory containing the SLSTR data dir\n",
-    "# This folder should contain one or more subfolders with the SLSTR data (ending .SEN3)\n",
     "# To save memory and CPU time, only use a few granules maximum for this.\n",
+    "# Downloaded GOES data will be placed into this directory.\n",
+    "#\n",
+    "# NOTE: Downloaded data is not automatically deleted after the notebook is run!\n",
+    "# You must manually delete the files from this directory.\n",
     "indir = 'D:/sat_data/pycoxmunk_test/'\n",
     "\n",
-    "# Set the directory where we'll save the output\n",
+    "# Set the directory where we'll save the output images\n",
     "outdir = 'D:/sat_data/pycoxmunk_test/out/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "c8055144",
    "metadata": {},
    "outputs": [],
@@ -105,12 +91,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "28cd1366",
    "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
     "scrolled": false
    },
    "outputs": [],
@@ -128,13 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "3d555065",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create the PyCoxMunk class for processing\n",
@@ -145,13 +124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "d21f1c78",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Here we assume a uniform wind, needed for cases we don't have actual wind data\n",
@@ -161,13 +136,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "ab714a7c",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Retrieve the sea surface reflectance\n",
@@ -176,31 +147,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "136378a9",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Save results to the directory specified earlier\n",
     "# Each dataset is saved to its own file.\n",
     "pcm.scn.save_datasets(base_dir=outdir, enhance=False, dtype=np.float32)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95e1cd1f",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
