Update notebooks with DOIs for zenodo.

--- a/Examples/Complex_SEVIRI.ipynb
+++ b/Examples/Complex_SEVIRI.ipynb
@@ -14,11 +14,15 @@
     "\n",
     "This script requires MSG/SEVIRI data in native format (although it can be easily edited to use HRIT data instead).\n",
     "\n",
-    "For this example, a full disk SEVIRI dataset from 26th March 2016 at 14:30 UTC was used. The data file can be downloaded at https://data.eumetsat.int\n",
+    "For this example, a full disk SEVIRI dataset from 26th March 2016 at 15:00 UTC was used. The data file is available via zenodo:\n",
+    "https://doi.org/10.5281/zenodo.7885995\n",
+    "\n",
+    "The data file is copyright EUMETSAT (2016).\n",
+    "\n",
     "\n",
     "ERA5 data is included in the Examples directory. These files were generated using Copernicus Climate Change Service information (2022).\n",
     "\n",
-    "Output from this example notebook is available on zenodo: https://doi.org/10.5281/zenodo.7885996\n",
+    "Output from this example notebook is available on zenodo at the same link as above.\n",
     "\n",
     "In this example we compute the sea surface reflectance and also the BRDF values:\n",
     "\n",
@@ -79,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "0f07e2b9",
    "metadata": {
     "pycharm": {
@@ -89,7 +93,7 @@
    "outputs": [],
    "source": [
     "# Filename of the input granule\n",
-    "sev_fname = 'd:/sat_data/SEV/MSG3-SEVI-MSG15-0100-NA-20160326144242.057000000Z-NA.nat'\n",
+    "sev_fname = 'd:/sat_data/SEV/MSG3-SEVI-MSG15-0100-NA-20160326151242.278000000Z-NA.nat'\n",
     "\n",
     "# Landmask filename\n",
     "lsm_fname = './SEVIRI_LANDMASK.tiff'\n",
@@ -337,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "6f2c3cbc",
    "metadata": {
     "pycharm": {
@@ -350,6 +354,14 @@
     "# Save original data to disk.\n",
     "pcm.scn.save_datasets(datasets=bnames_out, base_dir='d:/sat_data/sev/out/', enhance=False, dtype=np.float32)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "368e118e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
